--- a/trunk/simulations-java/simulations/greenhouse/changes.txt
+++ b/trunk/simulations-java/simulations/greenhouse/changes.txt
@@ -1,3 +1,4 @@
+Finished i18n of Molecules & Light sim.
 Internationalized the Molecules & Light control panel and "Return Molecule" button.
 Permanently removed the "flash" graphic, which flashed when photons were re-emitted by atmosphere.  It was previously commented out.
 Removed unused code left over from aborted port of older tabs to Piccolo.
