--- a/trunk/simulations-java/simulations/greenhouse/data/greenhouse/localization/greenhouse-strings.properties
+++ b/trunk/simulations-java/simulations/greenhouse/data/greenhouse/localization/greenhouse-strings.properties
@@ -86,8 +86,14 @@ ButtonNode.ReturnMolecule=Return Molecule
 PhotonEmitterNode.Infrared =<html>Infrared<br>Photon</html>
 PhotonEmitterNode.Visible = <html>Visible<br>Photon</html>
 
-# Quad frequency control panel
-
+# Quad wavelength control panel
+QuadWavelengthSelector.Microwave = Microwave
+QuadWavelengthSelector.Infrared = Infrared
+QuadWavelengthSelector.Visible = Visible
+QuadWavelengthSelector.Ultraviolet = Ultraviolet
+QuadWavelengthSelector.PhotonEnergy = PhotonEnergy
+QuadWavelengthSelector.Higher = Higher
+QuadWavelengthSelector.Lower = Lower
 
 # ThermometerGraphic
 ThermometerGraphic.KelvinUnits    =\u212A
