--- a/trunk/simulations-java/simulations/greenhouse/changes.txt
+++ b/trunk/simulations-java/simulations/greenhouse/changes.txt
@@ -1,3 +1,5 @@
+# 3.01.06 (47363) Dec 21, 2010
+12/21/10 Deploying to dev to enable review of Molecules and Light.
 Finished i18n of Molecules & Light sim.
 Internationalized the Molecules & Light control panel and "Return Molecule" button.
 Permanently removed the "flash" graphic, which flashed when photons were re-emitted by atmosphere.  It was previously commented out.
