--- a/trunk/simulations-java/simulations/bound-states/data/bound-states/localization/bound-states-strings_hu.properties
+++ b/trunk/simulations-java/simulations/bound-states/data/bound-states/localization/bound-states-strings_hu.properties
@@ -1,5 +1,5 @@
-#bound-states-strings_hu.properties created Sun Dec 19 18:41:46 CET 2010 using: bound-states 1.07.00 (40180), translation-utility 2.09.00 (44031) Sep 14, 2010
-#Sun Dec 19 18:41:46 CET 2010
+#bound-states-strings_hu.properties created Wed Dec 22 08:06:02 CET 2010 using: bound-states 1.07.00 (40180), translation-utility 2.09.00 (44031) Sep 14, 2010
+#Wed Dec 22 08:06:02 CET 2010
 label.color.dragHandleMarkers=markerek\:
 BSCoulomb3DDialog.title=3D Coulomb-g\u00F6d\u00F6r
 label.display=Mutsasd a bejel\u00F6ltet\:
@@ -40,7 +40,7 @@ help.magnifyingGlass=<html>K\u00F6zeli energiaszintek<br>egyik\u00E9nek kiv\u00E
 BSTwoWellsModule.title=K\u00E9t g\u00F6d\u00F6r (molekulak\u00F6t\u00E9s)
 button.superposition=Szuperpon\u00E1lt \u00E1llapot...
 axis.position=Helyzet
-covalent-bonds.name=Dupla g\u00F6dr\u00F6k \u00E9s a kovalens k\u00F6t\u00E9s
+covalent-bonds.name=Kovalens k\u00F6t\u00E9s\: 2 potenci\u00E1lg\u00F6d\u00F6r
 band-structure.name=S\u00E1vszerkezet
 button.clear=T\u00F6r\u00F6l
 label.superpositionCoefficient=c
