--- a/simulations-java/simulations/build-an-atom/data/build-an-atom/localization/build-an-atom-strings.properties
+++ b/simulations-java/simulations/build-an-atom/data/build-an-atom/localization/build-an-atom-strings.properties
@@ -23,7 +23,7 @@ neutral.atom = Neutral Atom
 indicator.element=Element
 indicator.symbol=Symbol
 indicator.mass.number=Mass Number
-indicator.charge=Charge
+indicator.charge=Net Charge
 
 positive.ion = + Ion
 negative.ion = - Ion
