--- a/trunk/simulations-java/simulations/build-an-atom/changes.txt
+++ b/trunk/simulations-java/simulations/build-an-atom/changes.txt
@@ -1,3 +1,4 @@
+12/22/10 Changed the string "Charge" to "Net Charge".
 12/21/10 replace incomplete "Reset All" node with ResetAllButtonNode
 # 1.00.18 (47184) Dec 15, 2010
 12/15/10 Minor fixes (see log for details), this is another release candidate for first version with game.
