--- a/trunk/simulations-java/simulations/gravity-and-orbits/changes.txt
+++ b/trunk/simulations-java/simulations/gravity-and-orbits/changes.txt
@@ -1,3 +1,4 @@
+deleted PublicProperty, it's appropriate to move getInitialValue into superclass
 Change some class name prefixes from "GO" to "GAO"
 Change some class name prefixes from "GravityAndOrbits" to "GAO", where these classes names will be inlined frequently (eg, GAOStrings)
 Fixed: replace incomplete "Reset All" node with ResetAllButtonNode
