--- a/simulations-java/simulations/gravity-and-orbits/changes.txt
+++ b/simulations-java/simulations/gravity-and-orbits/changes.txt
@@ -1,3 +1,4 @@
+completed i18n, including use of singular/plural for units
 i18n of mass readouts, to handle ordering of value and units
 deleted PublicProperty, it's appropriate to move getInitialValue into superclass
 Change some class name prefixes from "GO" to "GAO"
