--- a/simulations-java/simulations/gravity-and-orbits/data/gravity-and-orbits/localization/gravity-and-orbits-strings.properties
+++ b/simulations-java/simulations/gravity-and-orbits/data/gravity-and-orbits/localization/gravity-and-orbits-strings.properties
@@ -1,5 +1,31 @@
 gravity-and-orbits.name=Gravity and Orbits
-title.exampleModule=Example Module
-title.exampleControlPanel=Model Controls
-units.time=sec
-int.minControlPanelWidth=215
+
+billionBillionSpaceStationMasses=billion billion space station masses
+cartoon=Cartoon (not to scale)
+earthDay=Earth Day
+earthDays=Earth Days
+earthMass=Earth mass
+earthMasses=Earth masses
+earthMinute=Earth Minute
+earthMinutes=Earth Minutes
+gravityForce=Gravity Force
+large=Large
+mass=Mass
+measuringTape=Measuring Tape
+millionEarthMasses=million Earth masses
+moon=Moon
+ourMoon=Our Moon
+ourSun=Our Sun
+path=Path
+planet=Planet
+real=Real
+spaceStation=Space Station
+spaceStationMass=Space Station mass
+spaceStationMasses=Space Station masses
+scale=Scale
+sun=Sun
+thousandEarthMasses=thousand Earth masses
+velocity=Velocity
+veryLarge=Very Large
+    
+pattern.0value.1units={0} {1}
