--- a/trunk/simulations-java/simulations/gravity-and-orbits/data/gravity-and-orbits/localization/gravity-and-orbits-strings.properties
+++ b/trunk/simulations-java/simulations/gravity-and-orbits/data/gravity-and-orbits/localization/gravity-and-orbits-strings.properties
@@ -2,6 +2,7 @@ gravity-and-orbits.name=Gravity and Orbits
 
 billionBillionSpaceStationMasses=billion billion space station masses
 cartoon=Cartoon (not to scale)
+earth=Earth
 earthDay=Earth Day
 earthDays=Earth Days
 earthMass=Earth mass
@@ -9,6 +10,7 @@ earthMasses=Earth masses
 earthMinute=Earth Minute
 earthMinutes=Earth Minutes
 gravityForce=Gravity Force
+internationalSpaceStation=ISS
 large=Large
 mass=Mass
 measuringTape=Measuring Tape
