--- a/trunk/simulations-java/simulations/gravity-and-orbits/changes.txt
+++ b/trunk/simulations-java/simulations/gravity-and-orbits/changes.txt
@@ -1,3 +1,4 @@
+reduce font size and unbold the tick mark labels on mass sliders, so that labels don't run together (eg "Large Our Moon")
 completed i18n, including use of singular/plural for units
 i18n of mass readouts, to handle ordering of value and units
 deleted PublicProperty, it's appropriate to move getInitialValue into superclass
