--- a/trunk/simulations-java/simulations/gravity-and-orbits/data/gravity-and-orbits/localization/gravity-and-orbits-strings.properties
+++ b/trunk/simulations-java/simulations/gravity-and-orbits/data/gravity-and-orbits/localization/gravity-and-orbits-strings.properties
@@ -1,6 +1,6 @@
 gravity-and-orbits.name=Gravity and Orbits
 
-billionBillionSpaceStationMasses=billion billion space station masses
+billionBillionSpaceStationMasses=billion billion Space Station masses
 cartoon=Cartoon (not to scale)
 earth=Earth
 earthDay=Earth Day
@@ -10,8 +10,6 @@ earthMasses=Earth masses
 earthMinute=Earth Minute
 earthMinutes=Earth Minutes
 gravityForce=Gravity Force
-internationalSpaceStation=ISS
-large=Large
 mass=Mass
 measuringTape=Measuring Tape
 millionEarthMasses=million Earth masses
@@ -21,6 +19,7 @@ ourSun=Our Sun
 path=Path
 planet=Planet
 real=Real
+satellite=Satellite
 spaceStation=Space Station
 spaceStationMass=Space Station mass
 spaceStationMasses=Space Station masses
@@ -28,6 +27,5 @@ scale=Scale
 sun=Sun
 thousandEarthMasses=thousand Earth masses
 velocity=Velocity
-veryLarge=Very Large
     
 pattern.0value.1units={0} {1}
