--- a/trunk/simulations-java/simulations/gravity-and-orbits/data/gravity-and-orbits/localization/gravity-and-orbits-strings.properties
+++ b/trunk/simulations-java/simulations/gravity-and-orbits/data/gravity-and-orbits/localization/gravity-and-orbits-strings.properties
@@ -9,6 +9,7 @@ earthMass=Earth mass
 earthMasses=Earth masses
 earthMinute=Earth Minute
 earthMinutes=Earth Minutes
+gravity=Gravity
 gravityForce=Gravity Force
 mass=Mass
 measuringTape=Measuring Tape
@@ -24,6 +25,7 @@ spaceStation=Space Station
 spaceStationMass=Space Station mass
 spaceStationMasses=Space Station masses
 scale=Scale
+show=Show
 sun=Sun
 thousandEarthMasses=thousand Earth masses
 velocity=Velocity
