--- a/trunk/simulations-java/simulations/gravity-and-orbits/changes.txt
+++ b/trunk/simulations-java/simulations/gravity-and-orbits/changes.txt
@@ -1,3 +1,5 @@
+MessageFormat i18n (value units) for measuring tape
+i18n for a couple more strings
 add Gravity property and check box, not properly wired up to model
 fixed look of disabled rewind button, required ugly copy of FloatingClockControlNode.StepButtonNode.getDisabledImageRescaleOpScale 
 remove "Large" and "Very Large" min/max labels on mass sliders, so that we don't have i18n issues, and can use "Space Station" label
