--- a/trunk/simulations-java/simulations/gravity-and-orbits/data/gravity-and-orbits/localization/gravity-and-orbits-strings.properties
+++ b/trunk/simulations-java/simulations/gravity-and-orbits/data/gravity-and-orbits/localization/gravity-and-orbits-strings.properties
@@ -9,6 +9,7 @@ earthMass=Earth mass
 earthMasses=Earth masses
 earthMinute=Earth Minute
 earthMinutes=Earth Minutes
+earthSystem=Earth System
 gravity=Gravity
 gravityForce=Gravity Force
 mass=Mass
@@ -28,6 +29,7 @@ scale=Scale
 show=Show
 sun=Sun
 thousandEarthMasses=thousand Earth masses
+thousandMiles=thousand miles
 velocity=Velocity
     
 pattern.0value.1units={0} {1}
