--- a/trunk/simulations-java/simulations/gravity-and-orbits/changes.txt
+++ b/trunk/simulations-java/simulations/gravity-and-orbits/changes.txt
@@ -1,3 +1,4 @@
+add "Physics" titled panel around Gravity check box
 wire up gravity on/off to model
 MessageFormat i18n (value units) for measuring tape
 i18n for a couple more strings
