--- a/trunk/simulations-java/simulations/gravity-and-orbits/changes.txt
+++ b/trunk/simulations-java/simulations/gravity-and-orbits/changes.txt
@@ -1,3 +1,5 @@
+# 0.0.10 (47428) Dec 27, 2010
+12/27/10 dev version with many fixes and changes
 only update camera after switching to new mode, to avoid rendering artifacts ("flash" of large body in some cases) 
 simplify camera, remove animated zoom stuff
 rewind to proper clock time (last time clock was paused) when Rewind button is pressed
