--- a/trunk/simulations-java/simulations/gravity-and-orbits/data/gravity-and-orbits/localization/gravity-and-orbits-strings.properties
+++ b/trunk/simulations-java/simulations/gravity-and-orbits/data/gravity-and-orbits/localization/gravity-and-orbits-strings.properties
@@ -9,7 +9,7 @@ earthMass=Earth mass
 earthMasses=Earth masses
 earthMinute=Earth Minute
 earthMinutes=Earth Minutes
-earthSystem=Earth System
+earthValues=Earth Values
 gravity=Gravity
 gravityForce=Gravity Force
 mass=Mass
