--- a/trunk/simulations-java/simulations/motion-series/data/motion-series/localization/motion-series-strings_hu.properties
+++ b/trunk/simulations-java/simulations/motion-series/data/motion-series/localization/motion-series-strings_hu.properties
@@ -1,102 +1,111 @@
-#the-ramp/localization/the-ramp-strings_hu.properties
-#Fri Jul 04 16:33:05 CEST 2008
+#motion-series-strings_hu.properties created Tue Dec 28 18:58:57 CET 2010 using: motion-series 2.00.00 (45090), translation-utility 2.09.00 (44031) Sep 14, 2010
+#Tue Dec 28 18:58:57 CET 2010
 property.ramp-angle=Lejt\u0151 hajl\u00E1ssz\u00F6ge
-module.introduction=Bemutat\u00E1s
-controls.sound=Hang
-time.go=Gyer\u00FCnk\!
-forces.parallel-friction=P\u00E1rhuzamos s\u00FArl\u00F3d\u00E1s
-readout.seconds={0} m\u00E1sodperc
-force.subscript.wall=<html>F<sub>fal</html>
-coordinates.entire-vectors=Teljes vektor
-units.joules=Joules
-force.subscript.net=<html>F<sub>nett\u00F3</html>
+game.summary.pattern.result-score=\= {0} pont
+properties.position=Helyzet
+game.moved-items=Kisz\u00E1ll\u00EDtott cikkek
+properties.velocity=Sebess\u00E9g
+force.abbrev.wall=f
+bodies.jupiter=Jupiteren
+audio.on=be
 coordinates.y=y
 coordinates.x=x
-forces.Gravity=Gravit\u00E1ci\u00F3
-time.slow-motion=Lass\u00FA mozg\u00E1s
-indicator.height-unknown=h\=???
-the-ramp.description=Er\u0151k a ferde s\u00EDkon
-time.record=Felv\u00E9tel
-the-ramp.name=A lejt\u0151
-energy.thermal=H\u0151
-message.overheated=T\u00FAlmelegedett
-readout.mass={0} ({1} kg)
-object.dog=Alv\u00F3 kutya
+object.position=T\u00E1rgyhelyzet
+controls.return-object=T\u00E1rgyat vissza
+property.coefficient-of-kinetic-friction=<html>Cs\u00FAsz\u00E1si s\u00FArl\u00F3d\u00E1s (\u03BC<sub>c</sub>)</html>
+game.play-again=\u00DAjraj\u00E1tsz\u00E1s
+ramp-forces-and-motion.module.introduction=Bevezet\u00E9s
+game.intro.robot-moving-company=<html>"Robot"<br>Sz\u00E1ll\u00EDt\u00F3<br>V\u00E1llalat</html>
+object.dog=Lusta kutya
+force.abbrev.friction=s
 units.degrees=fok
-coordinates.y-components=Y-komponens
-indicator.height-zero=h\=0.0 m
-time.pause=Sz\u00FCnet
-controls.velocity=Sebess\u00E9g
-camera.zoom-in=Zoom be
+game.result.delivered-successfully=sikeresen kisz\u00E1ll\u00EDtva
+controls.hide=Elrejt
+forces-and-motion.module.graphing.title=Er\u0151grafikonok
+game.scoreboard.score.pattern.score=Pontsz\u00E1m\: {0}
 property.mass=T\u00F6meg
-module.more-features=T\u00F6bb jellemz\u0151
-controls.hide-free-body-diagram=Vektor\u00E1bra
-property.coefficient-of-friction=S\u00FArl\u00F3d\u00E1si egy\u00FCtthat\u00F3
-forces.parallel-wall=P\u00E1rhuzamos fal er\u0151
-time.playback=Visszaj\u00E1tsz\u00E1s
-forces.Net=Nett\u00F3
-indicator.height-meters=h\={0} m
-coordinates.perpendicular-components=Mer\u0151leges \u00F6sszetev\u0151
-object.crate=L\u00E1da
-the.ramp=A lejt\u0151
-the.ramp.simulation=A lejt\u0151 szimul\u00E1ci\u00F3
-forces.normal=Mer\u0151leges
-controls.frictionless=S\u00FArl\u00F3d\u00E1smentes
-invitation=<html>Fejts ki er\u0151t<br> a szekr\u00E9ny tol\u00E1s\u00E1hoz</html>
-controls.reset=T\u00F6r\u00F6l
-units.abbr.joules=J
-display.graphs=Grafikonok
-controls.show-zero-point-pe=Kiindul\u00F3helyzetet mutat
-forces.weight=S\u00FAly
-forces.applied-force=Alkalmazott er\u0151 
-coordinates.parallel-components=P\u00E1rhuzamos \u00F6sszetev\u0151
-0.work={0} Munka
-energy.kinetic=Mozg\u00E1si
-controls.controls=Szab\u00E1lyz\u00F3
-controls.cool-ramp=Cs\u00FAsz\u00F3s lejt\u0151
-confirm-reset=Biztos vagy benne, hogy mindent t\u00F6r\u00F6lsz?
-energy.potential=Helyzeti
-camera.zoom-out=Zoom ki
-force.subscript.friction=<html>F<sub>s</html>
+game.object.mass-equals.pattern.mass=T\u00F6meg \= {0} kg
+position.controls.title=Helyzet
+ramp-forces-and-motion.module.force-graphs=Er\u0151diagramok
+bodies.moon=Holdon
+audio.off=ki
+walls.bouncy=Ruganyos
+game.intro.press-to-begin=Er\u0151kifejt\u00E9shez nyomj meg egy nyilat a billenty\u0171zeten...
+walls.type=Falak
+property.coefficient-of-static-friction=<html>Tapad\u00E1si s\u00FArl\u00F3d\u00E1s (\u03BC<sub>t</sub>)</html>
+game.robot-energy=Robotenergia
+game.object.kinetic-friction-equals.pattern.kinetic-friction=Cs\u00FAsz\u00E1si s\u00FArl\u00F3d\u00E1s \= {0}
+ramp-forces-and-motion.module.friction.title=S\u00FArl\u00F3d\u00E1s
+object.mystery-object=Ismeretlen t\u00E1rgy
+object.custom-crate=Egyedi l\u00E1da
+game.summary.pattern.energy-points={0} Joule x {1} pont/Joule
+vectors.parallel-components=P\u00E1rhuzamos \u00F6sszetev\u0151k
+game.intro.our-motto=Mott\u00F3nk
+game.result.stuck=letapadt
+forces-and-motion.module.intro.title=Bevezet\u00E9s
+ramp.angle-readout=Sz\u00F6g \= {0} \u00B0
+chart.time-axis-label=id\u0151 (s)
+forces.gravity=g
+game.score=Pontsz\u00E1m
+forces.gravity-parallel=S\u00FAly \u2225
+forces-and-motion.name=Er\u0151k \u00E9s mozg\u00E1s
+game.summary.total=\u00D6sszes
+game.show-summary=\u00D6sszefoglal\u00F3t\!
+force.abbrev.total=\u00F6
+game.summary.message=SZ\u00C1LL\u00CDT\u00C1SI JEGYZ\u0150K\u00D6NYV
 forces.parallel=P\u00E1rhuzamos er\u0151
-time.rewind=Vissza
-time.playback-timer=Visszaj\u00E1tsz\u00E1s id\u0151z\u00EDt\u00E9s
+force.abbrev.gravity=g
 controls.clear=T\u00F6rl\u00E9s
+game.result.missed-the-house=nem \u00E9rt c\u00E9lba
+game.summary.pattern.points-multiplier={0} pont x {1}
 units.meters=m\u00E9ter
 units.abbr.newtons=N
-forces.parallel-gravity=P\u00E1rhuzamos gravit\u00E1ci\u00F3s er\u0151
-property.position=Helyzet
-object.piano=Zongora
-coordinates.frames=Koordin\u00E1ta keret
-energy.energy=Energia
-controls.show-free-body-diagram=Vektor\u00E1bra
+ramp-forces-and-motion.module.robotMovingCompany="Robot" Sz\u00E1ll\u00EDt\u00F3 V\u00E1llalat
+vectors.title=Vektorok
+game.summary.pattern.earned-energy-points=\= {0} pont
+units.sec=s
+walls.brick=T\u00E9gla
+forces.sum=\u00D6sszeg
 controls.friction=S\u00FArl\u00F3d\u00E1s
+game.summary.pattern.earned-object-points=\= {0} pont
+surface.wood=Fa
 object.file-cabinet=Iratszekr\u00E9ny
-forces.kinetic-friction=Cs\u00FAsz\u00E1si s\u00FArl\u00F3d\u00E1s
+game.object.points-equals.pattern.points=Pont \= {0}
+ramp-forces-and-motion.name=Lejt\u0151\: er\u0151k \u00E9s mozg\u00E1s
+force.abbrev.applied=a
+controls.show=Mutat
 forces.friction=S\u00FArl\u00F3d\u00E1s
-time.record-timer=Felv\u00E9tel id\u0151z\u00EDt\u00E9s
-units.newtons=Newton
+vectors.sum-of-forces=Er\u0151k \u00F6sszege
+game.intro.motto-text=<html>K\u00EDm\u00E9letes kezel\u00E9s<br>Pontos kisz\u00E1ll\u00EDt\u00E1s<br>Energiamarad\u00E9k \= pont</html>
+game.instructions.press-arrow-keys=Haszn\u00E1ld a ny\u00EDlbillenty\u0171ket
 forces.applied=Alkalmazott
-forces.applied.n=Alkalmazott er\u0151 (N)
-confirm.clear=Ki\u00FCr\u00EDt\u00E9s meger\u0151s\u00EDt\u00E9se
-object.refrigerator=H\u0171t\u0151g\u00E9p
+game.final-score=V\u00E9gs\u0151 pontsz\u00E1m
+vectors.force-vectors=Er\u0151vektorok
+object.small-crate=Kis l\u00E1da
+surface.ice-no-friction=J\u00E9g (nincs s\u00FArl\u00F3d\u00E1s)
+ramp-forces-and-motion.module.energy=Energia
+object.refrigerator=H\u0171t\u0151szekr\u00E9ny
+controls.applied-force-x=Alkalmazott er\u0151
+game.result.crashed=megs\u00E9r\u00FClt
+vectors.point-of-origin=Orig\u00F3
 controls.choose-object=T\u00E1rgy kiv\u00E1laszt\u00E1sa
-readout.graph-name={0} Grafikon
+object.description.combobox.html.pattern.name_mass_kinetic_static=<html><b>{0}</b><br></br> {1} kg \u03BC<sub>cs</sub>\={2} \u03BC<sub>tap</sub>\={3}</html> 
+bodies.earth=F\u00F6ld\u00F6n
+forces-and-motion.module.friction.title=S\u00FArl\u00F3d\u00E1s
 display.free-body-diagram=Vektor\u00E1bra
-confirm-clear-graphs=Biztos vagy benne, hogy t\u00F6rl\u00F6d a grafikont?
-forces.parallel-applied=P\u00E1rhuzamos alkalmazott er\u0151
-work.subscript=W<sub>{0}</sub>
-forces.total=Teljes
-forces.static-friction=Tapad\u00E1si s\u00FArl\u00F3d\u00E1s
-units.abbr.meters=m
-units.meters-per-second=m/s
-confirm.reset.title=T\u00F6rl\u00E9s meger\u0151s\u00EDt\u00E9se
-time.live=\u00C9l\u0151
-0.energy={0} Energia
-energy.work=Munka
-controls.measuring-tape=M\u00E9r\u0151szalag
-indicator.height=h\=0.0 @ y\={0}
-forces.Wall=Fal
-coordinates.x-components=X-komponens
+game.object=T\u00E1rgy
+more.controls.title=Egyebek
+forces.wall=Fal
+game.lost-items=Elveszett cikkek
+ramp-forces-and-motion.module.coordinates=Koordin\u00E1t\u00E1k
+property.object-mass=T\u00E1rgy t\u00F6mege
+object.textbook=K\u00E9zik\u00F6nyv
+forces.parallel-title=P\u00E1rhuzamos er\u0151k
+game.ok=OK
+properties.acceleration=Gyorsul\u00E1s
+vectors.x-y-components=X-Y komponensek
+vectors.centered=K\u00F6z\u00E9ppontozott
+forces.parallel-title-with-units=P\u00E1rhuzamos er\u0151k (N)
 units.abbr.kg=kg
-controls.forces-to-show=Er\u0151ket mutat
+force.abbrev.normal=n
+forces.sum-parallel=\u00D6sszeg \u2225
